--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -370,16 +370,10 @@ And the last regression **insert method**.
 ```{r Hypothesis_1a, echo=FALSE, message=FALSE, warning=FALSE}
 
   # H1a: Performance measured by signal detection d’ declines with increasing n-back level.
-
-  # set the number of targets and non-targets, so in case the paradigm will be changed it is easily accessible
-  # they are multiplied by 2, because there are two runs per n-back level
-
-  num_targets <- 16*2
-  num_nontargets <- 48*2
   
   # compute index of rows in which the levels change
   
-  levelindex <- c(1,which(data_nback$level != dplyr::lag(data_nback$level)),nrow(data_nback))
+  levelindex <- c(1,which(data_RT$level != dplyr::lag(data_RT$level)),nrow(data_RT))
   
   # set up empty data frame for the loop to feed into
   
@@ -389,12 +383,16 @@ And the last regression **insert method**.
   
   for (i in 1:(length(levelindex)-1)) {
     
-    hits <- length(which(data_nback$target[c(levelindex[i]:(levelindex[i+1])-1)] == 1 &
-                           data_nback$correct[c(levelindex[i]:(levelindex[i+1])-1)] == 1) + (levelindex[i]-1))
-    falsealarms <- length(which(data_nback$target[c(levelindex[i]:(levelindex[i+1])-1)] == 0 &
-                           data_nback$correct[c(levelindex[i]:(levelindex[i+1])-1)] == 0) + (levelindex[i]-1))
-    newdata <- data.frame(subject = data_nback$subject[levelindex[i]],
-                          level = data_nback$level[levelindex[i]],
+    # set the number of targets and non-targets
+    num_targets <- length(which(data_RT$target[c(levelindex[i]:(levelindex[i+1])-1)] == 1))
+    num_nontargets <- length(which(data_RT$target[c(levelindex[i]:(levelindex[i+1])-1)] == 0))
+    
+    hits <- length(which(data_RT$target[c(levelindex[i]:(levelindex[i+1])-1)] == 1 &
+                           data_RT$correct[c(levelindex[i]:(levelindex[i+1])-1)] == 1) + (levelindex[i]-1))
+    falsealarms <- length(which(data_RT$target[c(levelindex[i]:(levelindex[i+1])-1)] == 0 &
+                           data_RT$correct[c(levelindex[i]:(levelindex[i+1])-1)] == 0) + (levelindex[i]-1))
+    newdata <- data.frame(subject = data_RT$subject[levelindex[i]],
+                          level = data_RT$level[levelindex[i]],
                           hitrate = hits/num_targets,
                           falsealarmrate = falsealarms/num_nontargets)
     dprime <- rbind(dprime, newdata)
@@ -463,11 +461,11 @@ Paired contrasts showed that *d'* was smaller for *...(and put in element 1/2/3 
   
   for (i in 1:(length(levelindex)-1)) {
     
-    meanrt <- mean(data_nback$rt[which(data_nback$correct[c(levelindex[i]:(levelindex[i+1])-1)] == 1)
+    meanrt <- mean(data_RT$rt[which(data_RT$correct[c(levelindex[i]:(levelindex[i+1])-1)] == 1)
                                  +(levelindex[i]-1)], na.rm = TRUE)
     
-    newdata <- data.frame(subject = data_nback$subject[levelindex[i]],
-                          level = data_nback$level[levelindex[i]],
+    newdata <- data.frame(subject = data_RT$subject[levelindex[i]],
+                          level = data_RT$level[levelindex[i]],
                           meanrt = meanrt)
     rt <- rbind(rt, newdata)
     
@@ -740,7 +738,7 @@ for (n in 1:(nrow(demo_data)/4)) {
 }
 subjectindex <- c(1,which(demo_data$subject != dplyr::lag(demo_data$subject)),nrow(demo_data))
 demo_sv <- data.frame(subject = character(), auc_sv = double(),
-                      ascent_mean = double(), ascent_sum = double(), auc_x_ascentmean = double(),
+                      ascent_mean = double(), ascent_sum = double(), auc_x_ascentmean = double(), auc_x_ascentsum = double(),
                       auc_westbrook = double())
 for (i in 1:(length(subjectindex)-1)) {
   sv_sorted <- sort(demo_data$sv[subjectindex[i]:(subjectindex[i]+3)])
@@ -760,6 +758,10 @@ for (i in 1:(length(subjectindex)-1)) {
                                                method = "trapezoid") * (((demo_data$sv[subjectindex[i]+3] - demo_data$sv[subjectindex[i]+2]) +
                                         (demo_data$sv[subjectindex[i]+2] - demo_data$sv[subjectindex[i]+1]) +
                                         (demo_data$sv[subjectindex[i]+1] - demo_data$sv[subjectindex[i]]))/3),
+                        auc_x_ascentsum = auc(demo_data$level[subjectindex[i]:(subjectindex[i]+3)], demo_data$sv[subjectindex[i]:(subjectindex[i]+3)],
+                                               method = "trapezoid") * ((demo_data$sv[subjectindex[i]+3] - demo_data$sv[subjectindex[i]+2]) +
+                                        (demo_data$sv[subjectindex[i]+2] - demo_data$sv[subjectindex[i]+1]) +
+                                        (demo_data$sv[subjectindex[i]+1] - demo_data$sv[subjectindex[i]])),
                         auc_westbrook = (0.5 * (sv_sorted[1] + sv_sorted[2]) +
                                            0.5 * (sv_sorted[1] + sv_sorted[3]) +
                                            0.5 * (sv_sorted[1] + sv_sorted[4]))/3)
@@ -770,12 +772,8 @@ demo_cor <- cor(demo_sv$auc_sv, demo_sv$auc_westbrook)
 ggplot(demo_data, aes(x=level, y=sv, group=subject)) +
   geom_line(aes(color=subject), size = 1)
 
-ggplot(demo_data[c((1*4+1):(1*4+4),(4*4+1):(4*4+4),(15*4+1):(15*4+4),(17*4+1):(17*4+4)),], aes(x=level, y=sv, group=subject)) +
-  geom_line(aes(color=subject), size = 1.5, position = position_jitter(w = 0.03, h = 0.03))
-ggplot(demo_data[c((3*4+1):(3*4+4),(5*4+1):(5*4+4),(9*4+1):(9*4+4),(11*4+1):(11*4+4)),], aes(x=level, y=sv, group=subject)) +
-  geom_line(aes(color=subject), size = 1.5, position = position_jitter(w = 0.03, h = 0.03))
-ggplot(demo_data[c((0*4+1):(0*4+4),(2*4+1):(2*4+4),(21*4+1):(21*4+4),(23*4+1):(23*4+4)),], aes(x=level, y=sv, group=subject)) +
-  geom_line(aes(color=subject), size = 1.5, position = position_jitter(w = 0, h = 0.03))
+#library(data.table) for the melt function
+ggplot(melt(setDT(demo_sv), id.vars = "subject", variable.name = "measure"), aes(fill=measure,y=value,x=subject)) + geom_bar(position = "dodge", stat = "identity")
 ```
 
 
