--- a/06_Paper/COG-ED/ref_COG-ED.bib
+++ b/06_Paper/COG-ED/ref_COG-ED.bib
@@ -11771,6 +11771,23 @@ These findings suggest that subjective listening effort depends on factors inclu
   urldate  = {2021-10-14},
 }
 
+@Article{MorisFernandez,
+  author     = {Morís Fernández, Luis and Vadillo, Miguel A.},
+  journal    = {Royal Society Open Science},
+  title      = {Flexibility in reaction time analysis: {Many} roads to a false positive?},
+  number     = {2},
+  pages      = {190831},
+  volume     = {7},
+  abstract   = {In the present article, we explore the influence of undisclosed flexibility in the analysis of reaction times (RTs). RTs entail some degrees of freedom of their own, due to their skewed distribution, the potential presence of outliers and the availability of different methods to deal with these issues. Moreover, these degrees of freedom are usually not considered part of the analysis itself, but preprocessing steps that are contingent on data. We analysed the impact of these degrees of freedom on the false-positive rate using simulations over real and simulated data. When several preprocessing methods are used in combination, the false-positive rate can easily rise to 17\%. This figure becomes more concerning if we consider that more degrees of freedom are awaiting down the analysis pipeline, potentially making the final false-positive rate much higher.},
+  doi        = {10.1098/rsos.190831},
+  file       = {Full Text PDF:https\://royalsocietypublishing.org/doi/pdf/10.1098/rsos.190831:application/pdf},
+  keywords   = {questionable research practices, reaction time, false positives, p-hacking},
+  publisher  = {Royal Society},
+  shorttitle = {Flexibility in reaction time analysis},
+  url        = {https://royalsocietypublishing.org/doi/10.1098/rsos.190831},
+  urldate    = {2021-11-03},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
