--- a/06_Paper/COG-ED/ref_COG-ED.bib
+++ b/06_Paper/COG-ED/ref_COG-ED.bib
@@ -11788,6 +11788,56 @@ These findings suggest that subjective listening effort depends on factors inclu
   urldate    = {2021-11-03},
 }
 
+@Article{Harwell1992,
+  author     = {Harwell, Michael R. and Rubinstein, Elaine N. and Hayes, William S. and Olds, Corley C.},
+  journal    = {Journal of Educational Statistics},
+  title      = {Summarizing {Monte} {Carlo} results in methodological research: {The} one- and two-factor fixed effects {ANOVA} cases},
+  year       = {1992},
+  issn       = {0362-9791},
+  month      = dec,
+  number     = {4},
+  pages      = {315--339},
+  volume     = {17},
+  abstract   = {Meta-analytic methods were used to integrate the findings of a sample of Monte Carlo studies of the robustness of the F test in the one- and two-factor fixed effects ANOVA models. Monte Carlo results for theWelch (1947) and Kruskal-Wallis (Kruskal \& Wallis, 1952) tests were also analyzed. The meta-analytic results provided strong support for the robustness of the Type I error rate of the F test when certain assumptions were violated. The F test also showed excellent power properties. However, the Type I error rate of the F test was sensitive to unequal variances, even when sample sizes were equal. The error rate of the Welch test was insensitive to unequal variances when the population distribution was normal, but nonnormal distributions tended to inflate its error rate and to depress its power. Meta-analytic and exact statistical theory results were used to summarize the effects of assumption violations for the tests.},
+  doi        = {10.3102/10769986017004315},
+  file       = {SAGE PDF Full Text:https\://journals.sagepub.com/doi/pdf/10.3102/10769986017004315:application/pdf},
+  keywords   = {meta-analysis, Monte Carlo, ANOVA},
+  language   = {en},
+  publisher  = {American Educational Research Association},
+  shorttitle = {Summarizing {Monte} {Carlo} {Results} in {Methodological} {Research}},
+  url        = {https://doi.org/10.3102/10769986017004315},
+  urldate    = {2021-11-04},
+}
+
+@Article{Lix1996,
+  author     = {Lix, Lisa M. and Keselman, Joanne C. and Keselman, H. J.},
+  journal    = {Review of Educational Research},
+  title      = {Consequences of assumption violations revisited: {A} quantitative review of alternatives to the one-way analysis of variance {F} test},
+  year       = {1996},
+  issn       = {1935-1046},
+  number     = {4},
+  pages      = {579--619},
+  volume     = {66},
+  abstract   = {Offers recommendations to applied researchers on the use of various parametric and nonparametric alternatives to the ANOVA F test under assumption violation conditions. Meta-analytic techniques were used to summarize the statistical robustness literature on the Type I error properties of the Brown-Forsythe (M. B. Brown A. B. Forsythe, 1974), G. S. James (1951) second-order, Kruskal-Wallis (W. H. Kruskal and W. A. Wallis, 1952), and B. L. Welch (1951) tests. Two variables, based on the theoretical work of G. E. P. Box (1954), are shown to be highly effective in deciding when a particular alternative procedure should be adopted. Based on the meta-analysis findings, it is recommended that researchers gain a clear understanding of the nature of their data before conducting statistical analyses. Of all of the procedures, the James and Welch tests performed best under violations of the variance homogeneity assumption, although their sensitivity to certain types of nonnormality may preclude their use in all data-analytic situations. (PsycINFO Database Record (c) 2016 APA, all rights reserved)},
+  address    = {US},
+  doi        = {10.2307/1170654},
+  keywords   = {Analysis of Variance, Meta Analysis, Statistical Tests, Consequence},
+  publisher  = {American Educational Research Assn},
+  shorttitle = {Consequences of assumption violations revisited},
+}
+
+@Article{Glass1972,
+  author    = {Gene V. Glass and Percy D. Peckham and James R. Sanders},
+  title     = {Consequences of failure to meet assumptions underlying the fixed effects analyses of variance and covariance},
+  year      = {1972},
+  month     = {sep},
+  number    = {3},
+  pages     = {237--288},
+  volume    = {42},
+  doi       = {10.3102/00346543042003237},
+  publisher = {American Educational Research Association ({AERA})},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
