--- a/06_Paper/COG-ED/ref_COG-ED.bib
+++ b/06_Paper/COG-ED/ref_COG-ED.bib
@@ -11838,6 +11838,20 @@ These findings suggest that subjective listening effort depends on factors inclu
   publisher = {American Educational Research Association ({AERA})},
 }
 
+@Article{Andre2021a,
+  author   = {André, Quentin},
+  journal  = {Journal of Experimental Psychology. General},
+  title    = {Outlier exclusion procedures must be blind to the researcher's hypothesis},
+  year     = {2021},
+  issn     = {1939-2222},
+  month    = may,
+  abstract = {When researchers choose to identify and exclude outliers from their data, should they do so across all the data, or within experimental conditions? A survey of recent papers published in the Journal of Experimental Psychology: General shows that both methods are widely used, and common data visualization techniques suggest that outliers should be excluded at the condition-level. However, I highlight in the present paper that removing outliers by condition runs against the logic of hypothesis testing, and that this practice leads to unacceptable increases in false-positive rates. I demonstrate that this conclusion holds true across a variety of statistical tests, exclusion criterion and cutoffs, sample sizes, and data types, and shows in simulated experiments and in a reanalysis of existing data that by-condition exclusions can result in false-positive rates as high as 43\%. I finally demonstrate that by-condition exclusions are a specific case of a more general issue: Any outlier exclusion procedure that is not blind to the hypothesis that researchers want to test may result in inflated Type I errors. I conclude by offering best practices and recommendations for excluding outliers. (PsycInfo Database Record (c) 2021 APA, all rights reserved).},
+  doi      = {10.1037/xge0001069},
+  file     = {PubMed entry:http\://www.ncbi.nlm.nih.gov/pubmed/34060886:text/html},
+  language = {eng},
+  pmid     = {34060886},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: grouping:
