--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -213,7 +213,92 @@ However, we propose that (3c) when taking individual preferences for different n
   # exclusion (___N_) or time-based outlier exclusion (___T_) do not need the different dimensions (A/W), and
   # time-based exclusion is nonsensical for transformed data sets.
 
+  
+  # create a list that contains the basic data frame of the n-back data for each of the pipelines
 
+  pipelines_data <- replicate(92, data_nback, simplify = FALSE)
+  pipelines_data <- setNames(pipelines_data, c("AARNN","AARNE","AAR2N","AAR2E","AAR3N","AAR3E","AARTN","AARTE",
+                                               "AALNN","AALNE","AAL2N","AAL2E","AAL3N","AAL3E",
+                                               "AAINN","AAINE","AAI2N","AAI2E","AAI3N","AAI3E",
+                                               "AASNN","AASNE","AAS2N","AAS2E","AAS3N","AAS3E",
+                                               "AWR2N","AWR2E","AWR3N","AWR3E",
+                                               "AWLNN","AWLNE","AWL2N","AWL2E","AWL3N","AWL3E",
+                                               "AWINN","AWINE","AWI2N","AWI2E","AWI3N","AWI3E",
+                                               "AWSNN","AWSNE","AWS2N","AWS2E","AWS3N","AWS3E",
+                                               "WWR2N","WWR2E","WWR3N","WWR3E",
+                                               "WWLNN","WWLNE","WWL2N","WWL2E","WWL3N","WWL3E",
+                                               "WWINN","WWINE","WWI2N","WWI2E","WWI3N","WWI3E",
+                                               "WWSNN","WWSNE","WWS2N","WWS2E","WWS3N","WWS3E",
+                                               "WAR2N","WAR2E","WAR3N","WAR3E",
+                                               "WALNN","WALNE","WAL2N","WAL2E","WAL3N","WAL3E",
+                                               "WAINN","WAINE","WAI2N","WAI2E","WAI3N","WAI3E",
+                                               "WASNN","WASNE","WAS2N","WAS2E","WAS3N","WAS3E"))
+  
+  for (i in 1:length(pipeline_data)) {
+    
+    # extract the name of the current data frame
+    
+    pipeline_name <- strsplit(names(pipelines_data)[i], "")
+    
+    # replace the RTs of incorrect trials with NA for better handling
+    
+    pipelines_data[[i]]$rt[pipelines_data[[i]]$correct == 0] <- NA
+    
+    # the first decision is whether transformations and exclusions will be applied across/within subjects/levels
+    
+    if (pipeline_name[[1]][1] == "A" & pipeline_name[[1]][2] == "A") {
+      
+          # the second decision is the type of transformation
+          
+          if (pipeline_name[[1]][3] == "L") {
+            
+            pipelines_data[[i]]$rt <- log10(pipelines_data[[i]]$rt)
+            
+          } else if (pipeline_name[[1]][3] == "I") {
+            
+            pipelines_data[[i]]$rt <- 1/(pipelines_data[[i]]$rt)
+            
+          } else if (pipeline_name[[1]][3] == "S") {
+            
+            pipelines_data[[i]]$rt <- sqrt(pipelines_data[[i]]$rt)
+          }
+      
+          # compute mean and standard deviation
+      
+          pipemean <- mean(pipelines_data[[i]]$rt, na.rm = TRUE)
+          pipesd <- sd(pipelines_data[[i]]$rt, na.rm = TRUE)
+          
+          # the third decision is the outlier exclusion
+      
+          if (pipeline_name[[1]][4] == "2") {
+            
+            pipelines_data[[i]] <- pipelines_data[[i]][c(which(pipelines_data[[i]]$rt < (pipemean + 2 * pipesd)
+                                                               & pipelines_data[[i]]$rt > (pipemean - 2 * pipesd))), ]
+                
+          } else if (pipeline_name[[1]][4] == "3") {
+            
+            pipelines_data[[i]] <- pipelines_data[[i]][c(which(pipelines_data[[i]]$rt < (pipemean + 3 * pipesd)
+                                                               & pipelines_data[[i]]$rt > (pipemean - 3 * pipesd))), ]
+            
+          } else if (pipeline_name[[1]][4] == "T") {
+            
+            pipelines_data[[i]] <- pipelines_data[[i]][-c(which(pipelines_data[[i]]$rt < 0.2)), ]
+          }
+      
+    } else if (pipeline_name[[1]][1] == "A" & pipeline_name[[1]][2] == "W") {
+      
+      
+    } else if (pipeline_name[[1]][1] == "W" & pipeline_name[[1]][2] == "W") {
+      
+      
+    } else if (pipeline_name[[1]][1] == "W" & pipeline_name[[1]][2] == "A") {
+      
+      
+    }
+  }
+  
+  #------old version below---
+  
   # one data frame without transformations is a simple copy of the original data frame
   # put that data frame in a list in which all data frames will be and replace the RTs of incorrect trials with NA
 
@@ -230,7 +315,6 @@ However, we propose that (3c) when taking individual preferences for different n
   pipelines_data[["RTE"]] <- pipelines_data[["RTN"]][-c(which(pipelines_data[["RTN"]]$correct == 0) + 1), ]
 
   # group 1: across subjects, across conditions
-  
   
     # raw versions
     
