--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -181,6 +181,19 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/da.10113?download=true},
   urldate    = {2020-06-05},
 }
 
+@article{Gross1998emerging,
+   author = {Gross, J. J.},
+   title = {The emerging field of emotion regulation: An integrative review},
+   journal = {Review of General Psychology},
+   volume = {2},
+   number = {3},
+   pages = {271-299},
+   ISSN = {1939-1552
+1089-2680},
+   DOI = {10.1037/1089-2680.2.3.271},
+   year = {1998}
+}
+
 @article{GrossJohn2003,
    author = {Gross, J. J. and John, O. P.},
    title = {Individual differences in two emotion regulation processes: implications for affect, relationships, and well-being},
