added new reference

--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -181,6 +181,20 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/da.10113?download=true},
   urldate    = {2020-06-05},
 }
 
+@article{Gros1998antecedent,
+   author = {Gross, J. J.},
+   title = {Antecedent- and response-focused emotion regulation: divergent consequences for experience, expression, and physiology},
+   journal = {Journal of Personality and Social Psychology},
+   volume = {74},
+   number = {1},
+   pages = {224-37},
+   ISSN = {0022-3514 (Print)
+0022-3514 (Linking)},
+   DOI = {10.1037/0022-3514.74.1.224},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/9457784},
+   year = {1998}
+}
+
 @article{Gross1998emerging,
    author = {Gross, J. J.},
    title = {The emerging field of emotion regulation: An integrative review},
