--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -311,6 +311,19 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/1097-4679%28199511%2951%3A
    year = {1995},
 }
 
+@article{Powers2019,
+   author = {Powers, J. P. and LaBar, K. S.},
+   title = {Regulating emotion through distancing: A taxonomy, neurocognitive model, and supporting meta-analysis},
+   journal = {Neuroscience and Biobehavioral Reviews},
+   volume = {96},
+   pages = {155-173},
+   ISSN = {0149-7634},
+   DOI = {10.1016/j.neubiorev.2018.04.023},
+   url = {<Go to ISI>://WOS:000457657300012
+https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6326885/pdf/nihms-1515865.pdf},
+   year = {2019}
+}
+
 @Misc{RStudioTeam2020,
   author    = {{RStudio Team}},
   note      = {Programmers: \_:n3594},
@@ -416,6 +429,20 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/1097-4679%28199511%2951%3A
    url = {https://www.ncbi.nlm.nih.gov/pubmed/15016066
 https://onlinelibrary.wiley.com/doi/pdfdirect/10.1111/j.0022-3506.2004.00263.x?download=true},
    year = {2004},
+}
+
+@article{Webb2012,
+   author = {Webb, T. L. and Miles, E. and Sheeran, P.},
+   title = {Dealing with feeling: a meta-analysis of the effectiveness of strategies derived from the process model of emotion regulation},
+   journal = {Psychological Bulletin},
+   volume = {138},
+   number = {4},
+   pages = {775-808},
+   ISSN = {1939-1455 (Electronic)
+0033-2909 (Linking)},
+   DOI = {10.1037/a0027600},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/22582737},
+   year = {2012}
 }
 
 @Article{Wessa2010,
