--- a/06_Paper/ER-ED/intro.Rmd
+++ b/06_Paper/ER-ED/intro.Rmd
@@ -12,7 +12,10 @@ It is therefore not surprising that emotion regulation (ER) has substantial impl
 Different strategies can be used to regulate emotions, namely situation selection, situation modification, attentional deployment, cognitive change, and response modification [@Gross1998antecedent], and, following the taxonomy of Powers and LaBar [-@Power2019], individuals can implement ER strategies by means of different tactics.
 So called antecedent-focused strategies, e.g., attentional deployment and cognitive change, take effect early in the emotion generation process [@Gross1998antecedent].
 In contrast, response modification takes place late in the process and is therefore conceptualized as response-focused strategy [@Gross1998antecedent].
-It is meta-analytically proven that these strategies reduce emotional arousal. 
+This postulated temporal sequence of ER strategies affects their effectiveness.
+It is meta-analytically proven that all mentioned strategies reduce emotional arousal [@Webb2012]. 
+Distraction as a tactic of attentional deployment and (expressive) suppression as a tactic of response modulation showed small to medium effect sizes on outcomes in measures of emotion experience (distraction: _d~+~_ = 0.27; suppression: _d~+~_ = 0.27).
+With an effect size of _d~+~_ = 0.45 distancing as tactic of cognitive change showed the highest effectiveness [@Webb2012].
 
 <!-- Nun ER Strategies aufzählen -->
 <!-- Wirksamkeit von ER Strategien -> Meta Analyse Webb -->
