--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -181,7 +181,7 @@ https://onlinelibrary.wiley.com/doi/pdfdirect/10.1002/da.10113?download=true},
   urldate    = {2020-06-05},
 }
 
-@article{Gros1998antecedent,
+@article{Gross1998antecedent,
    author = {Gross, J. J.},
    title = {Antecedent- and response-focused emotion regulation: divergent consequences for experience, expression, and physiology},
    journal = {Journal of Personality and Social Psychology},
